--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
