--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
     "@mui/styled-engine-sc": "^5.12.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
+    "socket.io": "^4.6.2",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
