--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "nodemon server/index.cjs"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -15,12 +16,14 @@
     "@mui/material": "^5.13.5",
     "@mui/styled-engine-sc": "^5.12.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
-    "socket.io": "^4.6.2",
+    "socket.io": "^4.7.1",
+    "socket.io-client": "^4.7.1",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
