--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
+    "chart.js": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "pg": "^8.11.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "socket.io": "^4.7.1",
